v1.4.0 (11/08/2023)
======

Features:
 - Added option TEMP_ERR_SPEC_FILE to control the template error function for the spectrum
 - The spectrum no longer inherits the same template error function as the photometry
 - AUTO_SCALE=1 no longer automatically disables the template error for the spectrum
 - Added option SPEC_LSF_FILE to apply a line spread function to the models
 - Added option LSF_BEST_FIT for appending the LSF-convolved model to the best fit output

Bug fixes:
 - Fixed crash when saving extra outputs and using an absolute path in CATALOG
 - Fixed invalid cache and grid files if using extremely large number of models or galaxies


v1.3.2 (16/07/2022)
======

Bug fixes:
 - Fixed compilation with GCC 11.x


v1.3.1 (04/06/2021)
======

Features:
 - Added line number information to error messages from the LIR input catalog

Bug fixes:
 - Added missing "log_bc_age_max" to the hash for cached grids (will invalidate existing grids)
 - Fixed grid2fits reading data in wrong order where there is more than one galaxy
 - Fixed compilation with XCode 12
 - Fixed compiler setup not properly propagated to dependencies (CFITSIO etc.)


v1.3.0 (12/06/2019)
======

Features:
 - Added a differential attenuation model a la Charlot & Fall.


v1.2.1 (20/03/2019)
======

Bug fixes:
 - Fixed best-fit SED wrong normalization when BEST_FROM_SIM=1 (thanks Themiya Nanayakkara)
 - Fixed Milky Way attenuation curve (thanks anhackastro)


v1.2 (13/01/2019)
====

Features:
 - Added the APPLY_VDISP opion, to convolve SEDs with a fixed velocity dispersion.
 - Added the REST_MAG option to produce rest-frame magnitudes.
 - Added the CUSTOM_SFH_LOOKBACK option to have time running backwards in the custom SFH expression
 - Added the CONTINUUM_INDICES option to produce absorption line EWs, Dn4000, etc.
 - Added fast++-grid2fits tool to convert .grid files into .fits files.
 - Added fast++-sfh2sed tool to produce SED for a given SFH.