@@ -324,6 +324,7 @@ To get the closest behavior to that of FAST-IDL, you should set ```C_INTERVAL=68
      * ```'la2t'```: (only for gridded SFH) the log10 of the ratio of age to SF timescale
      * ... plus any of the rest-frame magnitudes listed in ```REST_MAG``` (see above)
      * ... plus any of the custom SFH parameters (see ```CUSTOM_SFH``` below)
+ * ```OUTPUT_PRECISION```: possible values are any power of ten between zero (included) and one (excluded), which defines the numerical precision to use when printing values in the output catalog. The default is ```0```, and means to use the standard precision, which is 1e-4 for the redshift and metallicity, and 1e-2 for everything else. Otherwise, this value will be used to round the outputs. Note, this only affects the output catalog (.fout); all other outputs (including grid files) are always stored in full precision.
  * ```INTRINSIC_BEST_FIT```: possible values are ```0``` or ```1```. The default is ```0```. If set to ```1``` and ```BEST_FIT``` is also set to ```1```, the program will output the intrinsic best-fit SED of a galaxy (i.e., the SED of the galaxy prior to attenuation by dust) alongside the best-fitting template. The intrinsic model will be added as the extra column `fl_nodust` in the `best_fits/*.fit` file.
  * ```LSF_BEST_FIT```: possible values are ```0``` or ```1```. The default is ```0```. If set to ```1``` and ```BEST_FIT``` is also set to ```1```, the program will output the LSF-convolved best-fit SED of a galaxy alongside the best-fitting template. This is only useful if an LSF file is provided, see ```SPEC_LSF_FILE```. The LSF-convolved model will be added as the extra column `fl_lsf` in the `best_fits/*.fit` file.
  * ```BEST_SFHS```: possible values are ```0``` or ```1```. The default is ```0```. If set to ```1```, the program will output the best fit star formation history (SFH) to a file, in the ```best_fits``` directory (as for the best fit SEDs). If Monte Carlo simulations are enabled, the program will also output confidence intervals on the SFH for each time step, as well as the median SFH among all Monte Carlo simulations. This median may not correspond to any analytical form allowed by your chosen SFH model.
